--- a/react-course/src/App.css
+++ b/react-course/src/App.css
@@ -26,7 +26,7 @@ body {
   
 }
 
-button {
+.addButton {
    position: relative;
    background-color: blue;
    border: none;
@@ -43,7 +43,7 @@ button {
    cursor: pointer;
 }
 
-button::after {
+.addButton::after {
    content: "";
    background: #90EE90;
    display: block;
@@ -56,10 +56,44 @@ button::after {
    transition: all 0.8s
 }
 
-button:active:after {
+.addButton:active:after {
   padding: 0;
   margin: 0;
   opacity: 1;
   transition: 0s
 }
  
+
+.list-items {
+  background: #FFFFFF;
+  padding: 10px 5px 10px 5px;
+  margin: 50px 100px 50px 100px;
+  text-align: center;
+}
+
+
+
+
+.delete {
+  margin-left: 50px;
+  background-color: red;
+  border-radius: 28px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 17px;
+  padding: 16px 31px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+
+.delete:hover {
+  background-color: darkred;
+}
+
+.delete:active {
+  position: relative;
+  top: 1px;
+}
